# kuka-lwr

./: HOW_TO_USE.md
cartesian_impedance_interface/: CMakeLists.txt  package.xml
cartesian_impedance_interface/include/cartesian_impedance_interface/: cartesian_impedance_interface.h
joint_impedance_interface/: CMakeLists.txt  package.xml
joint_impedance_interface/include/joint_impedance_interface/: joint_impedance_interface.h
kuka_lwr/: package.xml
lwr_controllers/: CMakeLists.txt  lwr_controllers_plugins.xml  package.xml
lwr_controllers/include/lwr_controllers/: KinematicChainControllerBase.h  cartesian_impedance_controller.h  cartesian_position.h  itr_cartesian_impedance_controller.h  itr_joint_impedance_controller.h  lwr_state_controller.h
lwr_controllers/src/: cartesian_impedance_controller.cpp  cartesian_position.cpp  itr_cartesian_impedance_controller.cpp  itr_joint_impedance_controller.cpp  lwr_state_controller.cpp
lwr_hw/: CMakeLists.txt  package.xml
lwr_hw/include/lwr_hw/: lwr_hw.h  lwr_hw_fri.hpp  lwr_hw_real.h
lwr_hw/src/: default_lwr_hw_sim.cpp  lwr_hw.cpp  lwr_hw_fri_node.cpp  lwr_hw_real.cpp
lwr_hw/src/fri/: friremote.cpp
lwr_launch/launch/: state_publisher.launch
lwr_moveit/config/: impedance_controller.yaml  lwr_controller.yaml  position_controller.yaml
lwr_moveit/default_warehouse_mongo_db/: .gitignore
lwr_moveit/launch/: lwr_moveit_controller_manager.launch.xml  move_group.launch  moveit_planning_execution.launch  trajectory_execution.launch.xml
single_lwr_example/single_lwr_example/: package.xml
single_lwr_example/single_lwr_launch/launch/: single_lwr.launch
single_lwr_example/single_lwr_moveit/config/: controllers.yaml
single_lwr_example/single_lwr_robot/config/: 980241-FRI-Driver.init  controllers.yaml
single_lwr_example/single_lwr_robot/robot/: single_lwr_robot.urdf.xacro
