<?xml version="1.0"?>
<package>
  <name>joint_impedance_interface</name>
  <version>0.0.0</version>
  <description>
  The joint_impedance_interface package provides a derived ImpedanceJointHandle to access the KUKA specific commands as
  Position, Additional Torque, Stiffness and Damping.
  To derive your own controller, a JointImpedanceInterface is provided as hardware_interface for the controller implementation.
  
  This package is used in the KUKA "lwr_controllers" and "lwr_hw" packages.
  The "ImpedanceJointHandle" and the "JointImpedanceInterface" are also registered in the hardware implementation class "LWRHW" inside "lwr_hw/src/lwr_hw.cpp"
  </description>

  <maintainer email="thomas.eiband@gmail.com">Thomas Eiband</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/joint_impedance_interface</url> -->

  <author email="thomas.eiband@gmail.com">Thomas Eiband</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>roscpp</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
