<package>
  <name>kuka_lwr</name>
  <version>0.1.0</version>
  <description>
    ROS meta-package containing kuka lwr packages.
  </description>
  <maintainer email="carlos.rosales@for.unipi.it">Carlos Rosales</maintainer>
  <maintainer email="manuel.bonilla@centropiaggio.unipi.it">Manuel Bonilla</maintainer>
  <license>GPLv2</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <!-- PACKAGES -->

  <!-- Model -->
  <run_depend> lwr_description </run_depend>

  <!-- ROSControl-based controllers -->
  <run_depend> lwr_controllers </run_depend>

  <!--  Hardware interfaces real/sim -->
  <run_depend> lwr_hw </run_depend>

  <!--  TE: new joint impedance interface -->
  <run_depend> joint_impedance_interface </run_depend>

  <!--  TE: new cartesian impedance interface -->
  <run_depend> cartesian_impedance_interface </run_depend>



  <export>
    <metapackage/>
  </export>
</package>
